[gd_scene load_steps=72 format=3 uid="uid://bb7xowicyfpll"]

[ext_resource type="Script" path="res://src/Player/player.gd" id="1_0yph4"]
[ext_resource type="Texture2D" uid="uid://oviiqwhk5jdk" path="res://assets/oak_woods_v1.0/character/char_blue.png" id="1_8nvjb"]
[ext_resource type="Script" path="res://src/Player/PlayerUI.gd" id="3_7nhem"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3rjip"]
atlas = ExtResource("1_8nvjb")
region = Rect2(0, 64, 56, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_6020q"]
atlas = ExtResource("1_8nvjb")
region = Rect2(56, 64, 56, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_682xo"]
atlas = ExtResource("1_8nvjb")
region = Rect2(112, 64, 56, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_6lhng"]
atlas = ExtResource("1_8nvjb")
region = Rect2(168, 64, 56, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_vw5u8"]
atlas = ExtResource("1_8nvjb")
region = Rect2(224, 64, 56, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2j70"]
atlas = ExtResource("1_8nvjb")
region = Rect2(280, 64, 56, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_xta8e"]
atlas = ExtResource("1_8nvjb")
region = Rect2(168, 336, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0l00"]
atlas = ExtResource("1_8nvjb")
region = Rect2(0, 280, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2y1q"]
atlas = ExtResource("1_8nvjb")
region = Rect2(56, 280, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkfkf"]
atlas = ExtResource("1_8nvjb")
region = Rect2(112, 280, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_kadxl"]
atlas = ExtResource("1_8nvjb")
region = Rect2(168, 280, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltc3n"]
atlas = ExtResource("1_8nvjb")
region = Rect2(224, 280, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xsps"]
atlas = ExtResource("1_8nvjb")
region = Rect2(280, 280, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1k1c"]
atlas = ExtResource("1_8nvjb")
region = Rect2(336, 280, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_te20h"]
atlas = ExtResource("1_8nvjb")
region = Rect2(392, 280, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_7w3qd"]
atlas = ExtResource("1_8nvjb")
region = Rect2(0, 336, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_036ft"]
atlas = ExtResource("1_8nvjb")
region = Rect2(56, 336, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkyk4"]
atlas = ExtResource("1_8nvjb")
region = Rect2(112, 336, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_24s1i"]
atlas = ExtResource("1_8nvjb")
region = Rect2(168, 336, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_kd4hc"]
atlas = ExtResource("1_8nvjb")
region = Rect2(0, 10, 56, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2dbg"]
atlas = ExtResource("1_8nvjb")
region = Rect2(56, 10, 56, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_00wg6"]
atlas = ExtResource("1_8nvjb")
region = Rect2(112, 10, 56, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_btkiv"]
atlas = ExtResource("1_8nvjb")
region = Rect2(168, 10, 56, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_l43bq"]
atlas = ExtResource("1_8nvjb")
region = Rect2(224, 10, 56, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_llvfk"]
atlas = ExtResource("1_8nvjb")
region = Rect2(280, 10, 56, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajw5q"]
atlas = ExtResource("1_8nvjb")
region = Rect2(0, 168, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3f6n"]
atlas = ExtResource("1_8nvjb")
region = Rect2(56, 168, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_lu86j"]
atlas = ExtResource("1_8nvjb")
region = Rect2(112, 168, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_54ij6"]
atlas = ExtResource("1_8nvjb")
region = Rect2(168, 168, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_uonkw"]
atlas = ExtResource("1_8nvjb")
region = Rect2(224, 168, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_osyyy"]
atlas = ExtResource("1_8nvjb")
region = Rect2(280, 168, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_epknu"]
atlas = ExtResource("1_8nvjb")
region = Rect2(336, 168, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0io2"]
atlas = ExtResource("1_8nvjb")
region = Rect2(392, 168, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_413f6"]
atlas = ExtResource("1_8nvjb")
region = Rect2(0, 224, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_6t8lf"]
atlas = ExtResource("1_8nvjb")
region = Rect2(56, 224, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_yavdr"]
atlas = ExtResource("1_8nvjb")
region = Rect2(112, 224, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqjrm"]
atlas = ExtResource("1_8nvjb")
region = Rect2(168, 224, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxjui"]
atlas = ExtResource("1_8nvjb")
region = Rect2(224, 224, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysfof"]
atlas = ExtResource("1_8nvjb")
region = Rect2(280, 224, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3xfi"]
atlas = ExtResource("1_8nvjb")
region = Rect2(336, 224, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_73f04"]
atlas = ExtResource("1_8nvjb")
region = Rect2(392, 224, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_nh2ge"]
atlas = ExtResource("1_8nvjb")
region = Rect2(0, 179, 56, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vskq"]
atlas = ExtResource("1_8nvjb")
region = Rect2(56, 179, 56, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_iubfe"]
atlas = ExtResource("1_8nvjb")
region = Rect2(112, 179, 56, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkewr"]
atlas = ExtResource("1_8nvjb")
region = Rect2(168, 179, 56, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_g62s3"]
atlas = ExtResource("1_8nvjb")
region = Rect2(224, 179, 56, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lx4e"]
atlas = ExtResource("1_8nvjb")
region = Rect2(280, 179, 56, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_654ui"]
atlas = ExtResource("1_8nvjb")
region = Rect2(336, 179, 56, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_vo321"]
atlas = ExtResource("1_8nvjb")
region = Rect2(392, 179, 56, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpuha"]
atlas = ExtResource("1_8nvjb")
region = Rect2(0, 232, 56, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_oee4i"]
atlas = ExtResource("1_8nvjb")
region = Rect2(56, 232, 56, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1gst"]
atlas = ExtResource("1_8nvjb")
region = Rect2(112, 232, 56, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdhgr"]
atlas = ExtResource("1_8nvjb")
region = Rect2(168, 232, 56, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfkja"]
atlas = ExtResource("1_8nvjb")
region = Rect2(224, 232, 56, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_cpu6t"]
atlas = ExtResource("1_8nvjb")
region = Rect2(280, 232, 56, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1h04"]
atlas = ExtResource("1_8nvjb")
region = Rect2(336, 232, 56, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wuw5"]
atlas = ExtResource("1_8nvjb")
region = Rect2(392, 232, 56, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_si4xw"]
atlas = ExtResource("1_8nvjb")
region = Rect2(0, 118, 56, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3lem"]
atlas = ExtResource("1_8nvjb")
region = Rect2(56, 118, 56, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ngob"]
atlas = ExtResource("1_8nvjb")
region = Rect2(112, 118, 56, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_sq8vy"]
atlas = ExtResource("1_8nvjb")
region = Rect2(168, 118, 56, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_7n38i"]
atlas = ExtResource("1_8nvjb")
region = Rect2(224, 118, 56, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcipd"]
atlas = ExtResource("1_8nvjb")
region = Rect2(280, 118, 56, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_7glko"]
atlas = ExtResource("1_8nvjb")
region = Rect2(336, 118, 56, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcuuy"]
atlas = ExtResource("1_8nvjb")
region = Rect2(392, 118, 56, 54)

[sub_resource type="SpriteFrames" id="SpriteFrames_nxoy2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3rjip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6020q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_682xo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6lhng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vw5u8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2j70")
}],
"loop": true,
"name": &"Attack",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xta8e")
}],
"loop": true,
"name": &"Dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0l00")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2y1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkfkf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kadxl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltc3n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xsps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1k1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_te20h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7w3qd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_036ft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkyk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24s1i")
}],
"loop": true,
"name": &"Death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kd4hc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2dbg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00wg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btkiv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l43bq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_llvfk")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajw5q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3f6n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lu86j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_54ij6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uonkw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_osyyy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epknu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0io2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_413f6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6t8lf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yavdr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqjrm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxjui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ysfof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3xfi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_73f04")
}],
"loop": true,
"name": &"Jump",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nh2ge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vskq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iubfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkewr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g62s3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lx4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_654ui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vo321")
}],
"loop": true,
"name": &"JumpAscend",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpuha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oee4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1gst")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdhgr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfkja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cpu6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1h04")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wuw5")
}],
"loop": true,
"name": &"JumpDescend",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_si4xw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3lem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ngob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sq8vy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7n38i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcipd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7glko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcuuy")
}],
"loop": true,
"name": &"Move",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f4vt6"]
height = 38.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bc36x"]
radius = 5.0
height = 24.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_mask = 122
script = ExtResource("1_0yph4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -4)
sprite_frames = SubResource("SpriteFrames_nxoy2")
animation = &"Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_f4vt6")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="WeaponHitbox" type="Area2D" parent="." groups=["Player"]]
position = Vector2(5, 0)
collision_mask = 58

[node name="Hitbox" type="CollisionShape2D" parent="WeaponHitbox"]
position = Vector2(15, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_bc36x")

[node name="PlayerUI" type="CanvasLayer" parent="."]
script = ExtResource("3_7nhem")

[node name="HealthIndicator" type="ProgressBar" parent="PlayerUI"]
modulate = Color(0, 0.898039, 0.105882, 1)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -48.0
offset_right = 290.0
offset_bottom = -8.0
grow_vertical = 0
max_value = 10.0
show_percentage = false

[node name="GameOverIndicator" type="Label" parent="PlayerUI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.5
offset_top = 150.0
offset_right = 75.5
offset_bottom = 189.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40

[connection signal="body_entered" from="WeaponHitbox" to="." method="_on_weapon_hitbox_body_entered"]
